<resources>
    <!-- General -->
    <string name="app_name">RetrofitMVVM</string>
    <string name="see_all">See All</string>

    <!-- Content Descriptions -->
    <string name="movie_image">Movie Image</string>
    <string name="player_image">Player Image</string>
    <string name="star_icon">Star Icon</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="favorite">Favorite</string>
    <string name="watchlist">Watchlist</string>
    <string name="video_library">Video Library</string>

    <!-- HomeFragment -->
    <string name="home">Home</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="movie_rating">%1$s (%2$s)</string>
    <string name="movie_year_and_genre">%1$s %2$s</string>

    <!-- ExploreFragment -->
    <string name="explore">Explore</string>
    <string name="filter">Filter</string>

    <!-- ListFragment -->
    <string name="list">My List</string>

    <!-- SettingsFragment -->
    <string name="settings">Settings</string>

    <!-- UpcomingFragment -->
    <string name="upcoming">Upcoming</string>

    <!-- BottomSheetLayout -->
    <string name="my_favorites">My Favorites</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="details_and_more">Details and more</string>

    <!-- DetailFragment -->
    <string name="duration">Duration</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="movie_rating_detail">%1$s (%2$s reviews)</string>
    <string name="recommendations">Recommendations</string>
    <string name="trailers">Trailers</string>
</resources>