<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageCardView"
            android:layout_width="100dp"
            android:layout_height="175dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/avatar_dummy_image"
                android:contentDescription="@string/movie_image"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/closeFloatingActionButton"
            app:layout_constraintStart_toEndOf="@id/imageCardView"
            app:layout_constraintTop_toTopOf="@id/imageCardView" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/closeFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnPrimary"
            android:contentDescription="@string/close"
            android:src="@drawable/close"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageCardView"
            app:maxImageSize="32dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/yearTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorTertiary"
            app:layout_constraintEnd_toStartOf="@id/closeFloatingActionButton"
            app:layout_constraintStart_toEndOf="@id/imageCardView"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="6"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/closeFloatingActionButton"
            app:layout_constraintStart_toEndOf="@id/imageCardView"
            app:layout_constraintTop_toBottomOf="@id/yearTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favoriteLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/watchListLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentLayout">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favoriteFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnPrimary"
            android:contentDescription="@string/favorite"
            android:src="@drawable/favorite"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="28dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/favoriteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/my_favorites"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favoriteFloatingActionButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/watchListLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/favoriteLayout"
        app:layout_constraintTop_toBottomOf="@id/contentLayout">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/watchListFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnPrimary"
            android:contentDescription="@string/watchlist"
            android:src="@drawable/watchlist"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="28dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/watchListTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/my_watchlist"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/watchListFloatingActionButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favoriteLayout" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:drawableLeft="@drawable/info"
        android:drawableRight="@drawable/chevron_right"
        android:drawableTint="?attr/colorOnPrimaryContainer"
        android:paddingHorizontal="16dp"
        android:text="@string/details_and_more"
        android:textAlignment="textStart"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:iconPadding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:ignore="RtlHardcoded" />
</androidx.constraintlayout.widget.ConstraintLayout>